# rag_with_rbac

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/api/routes/: ingest.py
app/core/: security.py
app/models/: response_models.py
app/services/: llm_service.py  rag_service.py
app/utils/: chunking.py  document_parser.py
backend/app/: main.py
backend/app/api/routes/: query.py
backend/app/core/: config.py
backend/app/db/: weaviate_client.py
backend/app/models/: request_models.py  response_models.py
backend/app/services/: embedding_service.py  llm_service.py  rag_service.py  vector_service.py
backend/config/: rag_config.yaml
backend/scripts/: ingest_docs.py
backend/src/: ingest.py  main.py  search.py
data/: Damaged_Return_Inspection_Report.docx  Reverse_Logistics_Compliance_Policy.docx  Reverse_Logistics_Workflow_Overview.docx  SOP_Returns_Processing_Warehouse.docx  Warehouse_Returns_Training_Guide.docx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatArea.tsx  MessageBubble.tsx  Sidebar.tsx
frontend/src/types/: index.ts
scripts/: create_schema.py
src/: create_schema.py
